<resources>
    <string name="app_name">OR Timer</string>

    <string name="progressbar_layout_loading">Loading…</string>

    <string name="all_label_placeholder">Lorem Ipsum</string>

    <string name="mainscreen_content_description_arc_shape_design">arc shape design</string>
    <string name="mainscreen_content_description_settings_icon">settings icon</string>
    <string name="mainscreen_start_a_session">Start a Session</string>
    <string name="mainscreen_content_description_timer_image">timer image</string>
    <string name="mainscreen_content_description_sandwatch_icon">sandwatch icon</string>
    <string name="mainscreen_no_time">No Time?</string>
    <string name="mainscreen_add_a_time_entry_and_it_will_show_up_n_here">Add a time entry and it will show up \n here.</string>
    <string name="mainscreen_add">Add</string>
    <string name="mainscreen_in_session">In Session…</string>
    <string name="mainscreen_hint_description">Description</string>
    <string name="mainscreenlayoutcustomdialog_hint_description">Enter Description</string>
    <string name="mainscreenlayoutcustomdialog_save">Save</string>
    <string name="mainscreen_delete">Delete</string>
    <string name="mainscreen_are_u_sure_u_want_to_delete">Are you sure you want to delete this entry?</string>
    <string name="mainscreen_no">No</string>
    <string name="mainscreen_yes">Yes</string>

    <string name="settings_title">Settings</string>
    <string name="settings_content_description_timer_icon">Timer Icon</string>
    <string name="settings_time_label">Time</string>
    <string name="settings_content_description_about_icon">About icon</string>
    <string name="settings_about_label">About</string>
    <string name="settingslayoutcustomdialog_save">Save</string>
    <string name="settingslayoutcustomdialog_24_hour_clock">24-Hour Clock</string>
    <string name="settingslayoutcustomdialog_12_hour_clock">12-Hour Clock</string>
    <string name="settingslayoutcustomdialog_select_your_time_preference">Select your time preference:</string>

    <string name="about_title">About</string>
    <string name="about_or_timer_version">OR Timer Version</string>
    <string name="about_icons_by">Icons By</string>
    <string name="about_icons8_url">https://icons8.com</string>

    <string name="ortimerapplication_notification_description">OR Timer Notification</string>
    <string name="ortimerapplication_notification_channel_id">OR Timer Channel ID</string>

    <string name="notification_content">In Session…</string>
</resources>
