<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainScreenConstraintLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainScreenConstraintLayoutTopBanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintHeight_percent=".45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mainScreenImageViewArc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/mainscreen_content_description_arc_shape_design"
            android:rotation="180"
            android:scaleType="fitXY"
            android:src="@drawable/mainscreen_shape_arc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/mainScreenButtonPlay"
            android:layout_width="@dimen/dp_56"
            android:layout_height="@dimen/dp_56"
            android:background="@drawable/all_shape_play_button"
            app:layout_constraintBottom_toTopOf="@+id/mainScreenImageViewArc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mainScreenImageViewArc" />

        <TextView
            android:id="@+id/mainScreenTextViewStartSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/mainscreen_start_a_session"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toTopOf="@+id/mainScreenButtonPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="@dimen/dp_96"
            android:layout_height="@dimen/dp_96"
            android:layout_marginBottom="@dimen/dp_10"
            android:contentDescription="@string/mainscreen_content_description_timer_image"
            android:src="@drawable/all_image_timer_white_96dp"
            app:layout_constraintBottom_toTopOf="@+id/mainScreenTextViewStartSession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/mainScreenImageViewSettings"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/dp_10"
            android:contentDescription="@string/mainscreen_content_description_settings_icon"
            android:src="@drawable/all_icon_settings_boxed_white_90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainScreenConstraintLayoutEmptyState"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/mainScreenButtonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenConstraintLayoutTopBanner">

        <ImageView
            android:id="@+id/mainScreenImageViewSandWatch"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_20"
            android:contentDescription="@string/mainscreen_content_description_sandwatch_icon"
            android:rotation="180"
            android:src="@drawable/all_image_sandwatch_80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mainScreenTextViewNoTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/mainscreen_no_time"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainScreenImageViewSandWatch" />

        <TextView
            android:id="@+id/mainScreenTextViewAddTimeEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainscreen_add_a_time_entry_and_it_will_show_up_n_here"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainScreenTextViewNoTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainScreenRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/dp_8"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/mainScreenButtonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenConstraintLayoutTopBanner"/>

    <Button
        android:id="@+id/mainScreenButtonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/all_shape_radius10_color_madison"
        android:text="@string/mainscreen_add"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_18"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>